<resources>
    <string name="app_name">DVT Weather</string>

    <string name="home_dashboard">Home</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="search_location">Search Location</string>
    <string name="settings">Settings</string>
    <string name="error_occurred">Oops! An error occurred. \n\n Please check your internet connection.
        \n\n Swipe down to retry.</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="weather_history">Weather History</string>
    <string name="sort_by">Sort by:</string>
    <string name="cache_string">Cache duration (hours)</string>
    <string name="loading_text">Fetching weather</string>
    <string name="weather_in">Weather in </string>
    <string name="comma">, </string>
    <string name="temp_symbol_celsius">\u2103</string>
    <string name="temp_symbol_fahrenheit">\u2109</string>
    <string name="select_date_text">Forecast up to 5days. Select end date for forecast.</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_speed_symbol">m/s</string>
    <string name="pressure_symbol">hPa</string>
    <string name="humidity_symbol">%</string>
    <string name="instant_weather">Instant Weather</string>
    <string name="no_forecast_info">Weather forecast for selected day is unavailable.</string>
    <string name="search">Search</string>
    <string name="favorite">Favorites</string>
    <string name="enter_city_text">Enter city name to search</string>
    <string name="zero_hits_text">Couldn\'t find your city. \n\n Go ahead and hit the search button.</string>
    <string name="zero_favorites_text">Your saved locations will\nappear here.</string>
    <string name="gps_text">Please enable your GPS!</string>

    <!-- Preferences -->
    <string name="preference_theme_title">Theme</string>

    <string name="light_theme_name">Light theme</string>
    <string name="dark_theme_name">Dark theme</string>
    <string name="auto_battery_name">Auto battery</string>
    <string name="follow_system_name">Follow system</string>

    <string name="light_theme_value" translatable="false">Light</string>
    <string name="dark_theme_value" translatable="false">Dark</string>
    <string name="auto_battery_value" translatable="false">Auto-battery</string>
    <string name="follow_system_value" translatable="false">System</string>
    <string name="flight_mode_error">Your device is in Flight Mode, disable and restart the application.</string>
    <string name="location_permission_error">Permission was not granted! \n\n Enable permission manually in this application\'s settings and restart the application.</string>
    <string name="highprecision_internet_error">An error occurred when getting your location! \n\n Ensure your device is connected to the internet. \n\n Swipe down to refresh.</string>
    <string name="location_optimization_error">Location Optimization Permission was not granted! \n\n Enable permission manually in application settings \n and restart the application.</string>
    <string name="general_main_error">An error occurred in getting your location! \n\n Ensure your device is connected to the internet \n\n Swipe down to refresh.</string>
    <string name="enable_gps">Enable your GPS and restart!</string>
    <string name="location_permission">Location Permission</string>
    <string name="access_location_message">This application requires access to your location to function!</string>
    <string name="no">No</string>
    <string name="ask_me">Ask me</string>
    <string name="gps_required_message">GPS is required for this application to function!</string>

    <string name="preference_temperature_unit_title">Temperature Unit</string>
    <string name="temp_unit_celsius">Celsius/°C</string>
    <string name="temp_unit_fahrenheit">Fahrenheit/°F</string>
    <string name="rate_app">Rate this app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_image_content_description">Current Weather Image</string>
    <string name="close_weather_info_bottom_sheet">Close Weather Info Bottom Sheet</string>
    <string name="title_activity_main_compose">MainActivityCompose</string>
    <string name="temp_placeholder">25\u2103</string>
    <string name="temp_min_placeholder">19\u2103\nmin</string>
    <string name="temp_max_placeholder">30\u2103\nmax</string>
    <string name="temp_current_placeholder">23\u2103\ncurrent</string>
    <string name="current_weather_placeholder">clouds</string>
    <string name="min">\nmin</string>
    <string name="current">\ncurrent</string>
    <string name="max">\nmax</string>
    <string name="seconds"> seconds</string>
    <string name="minutes"> minutes</string>
    <string name="hours"> hours</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_cache_duration">Enter Cache Duration</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="error_removing_from_favorites">Error removing from favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="error_adding_to_favorites">Error adding to favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="small_cloud">Small cloud image</string>
    <string name="big_cloud">Big cloud image</string>
    <string name="weather_bottom_sheet_bg_image">Weather bottom sheet background image</string>
    <string name="humidity_icon">Humidity icon</string>
    <string name="pressure_icon">Pressure icon</string>
    <string name="wind_speed_icon">Wind speed icon</string>
    <string name="grant_permissions">Grant Location Permissions</string>
    <string name="location_permission_desc">DVT Weather App requires location permissions to show weather information for your location. Please grant permissions to use this app.</string>
    <string name="nav_icon_content_desc">Navigate back</string>
    <string name="get_started">Get Started</string>
    <string name="permissions_permanently_denied">Permissions were permanently denied. You can enable them in the app settings.</string>
    <string name="title_mytestinstantdynamicfeature">My Test Instant Dynamic Feature</string>
    <string name="title_mytestdynamicfeature">My Dynamic Feature</string>
</resources>