<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.tommunyiri.dvtweatherapp.presentation.home.HomeFragment"
        android:label="@string/home_dashboard"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.tommunyiri.dvtweatherapp.presentation.settings.SettingsFragment"
        android:label="@string/settings"/>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.tommunyiri.dvtweatherapp.presentation.search.SearchFragment"
        android:label="@string/search"/>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.tommunyiri.dvtweatherapp.presentation.favorite.FavoritesFragment"
        android:label="@string/favorite">
        <action
            android:id="@+id/action_favoritesFragment_to_favoriteLocationsMapFragment"
            app:destination="@id/favoriteLocationsMapFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoriteLocationsMapFragment"
        android:name="com.tommunyiri.dvtweatherapp.presentation.favorite.FavoriteLocationsMapFragment"
        android:label="@string/favorite" />
</navigation>