<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sunny"
    tools:context=".ui.home.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/loading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/loading_text"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar"
                    app:layout_constraintStart_toStartOf="@+id/progressBar"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar" />

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_occurred"
                    android:textAlignment="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivCurrentWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/weather_image_content_description"
                    android:scaleType="fitXY"
                    android:src="@drawable/forest_sunny"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvWeatherInText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Nairobi"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="SUNDAY 6:00 AM"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvWeatherInText" />

                <TextView
                    android:id="@+id/tvWeatherTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="25\u2103"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDateText" />

                <TextView
                    android:id="@+id/tvWeatherMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="SUNNY"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvWeatherTemperature" />

                <TextView
                    android:id="@+id/tvMinTemp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="19\u2103\nmin"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivCurrentWeather" />

                <TextView
                    android:id="@+id/tvCurrentTemp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="25\u2103\nCurrent"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toStartOf="@+id/tvMaxTemp"
                    app:layout_constraintStart_toEndOf="@+id/tvMinTemp"
                    app:layout_constraintTop_toBottomOf="@+id/ivCurrentWeather" />

                <TextView
                    android:id="@+id/tvMaxTemp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="27\u2103\nmax"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivCurrentWeather" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/tvMinTemp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>